Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/iep_influencer__c.object-meta.xml
<CustomObject>
    <label>IEP Influencer</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Influencer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEP Influencers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>