Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Party_Type__c</field>
            <operation>equals</operation>
            <value>Plumbing Contractor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>IEP Influencers</relationshipLabel>
    <relationshipName>IEP_Influencers</relationshipName>
    <type>Lookup</type>
</CustomField>