Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Current_point__c.field-meta.xml
<CustomField>
    <fullName>Current_point__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current point</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>