Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/IEP_Created_through_Account__c.field-meta.xml
<CustomField>
    <fullName>IEP_Created_through_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IEP Created through Account</label>
    <type>Checkbox</type>
</CustomField>