Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Lockup_period__c.field-meta.xml
<CustomField>
    <fullName>Lockup_period__c</fullName>
    <label>Lockup period</label>
    <type>DateTime</type>
</CustomField>