Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Point_change_comment__c.field-meta.xml
<CustomField>
    <fullName>Point_change_comment__c</fullName>
    <description>Comment to be updated if point is changed manually</description>
    <inlineHelpText>Do not update point manually, unless asked explicitly. All changes with user information are tracked</inlineHelpText>
    <label>Point change comment</label>
    <type>TextArea</type>
</CustomField>