Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Profile_picture__c.field-meta.xml
<CustomField>
    <fullName>Profile_picture__c</fullName>
    <label>Profile picture</label>
    <type>Url</type>
</CustomField>