Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/RPL_level__c.field-meta.xml
<CustomField>
    <fullName>RPL_level__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RPL level</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>