Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tier</label>
    <referenceTo>GTM_Tier__c</referenceTo>
    <relationshipLabel>IEP Influencers</relationshipLabel>
    <relationshipName>IEP_Influencers</relationshipName>
    <type>Lookup</type>
</CustomField>