Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/fields/Total_point__c.field-meta.xml
<CustomField>
    <fullName>Total_point__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>