Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/validationRules/point_comment_mandatory_on_point_change.validationRule-meta.xml
<ValidationRule>
    <fullName>point_comment_mandatory_on_point_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( 
OR (
ISCHANGED( Total_point__c ),
ISCHANGED( Current_point__c  )
), 
NOT( ISCHANGED( Point_change_comment__c  )) 
)</errorConditionFormula>
    <errorMessage>Manual changes to points must be avoided. Please mention the reason for the change.</errorMessage>
</ValidationRule>