Partial_14Dec2021/force-app/main/default/objects/iep_influencer__c/listViews/all.listView-meta.xml
<ListView>
    <fullName>all</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Tier__c</columns>
    <columns>Total_point__c</columns>
    <columns>Current_point__c</columns>
    <columns>RPL_level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>